# vits-for-small-scale-datasets

./: .gitignore  README.md  main.py  projection_head.py  pyproject.toml  run_ssl.slurm  train_ssl.py
models/: cait.py  swin.py
utils/: utils_ssl.py
