[project]
name = "vits-for-small-scale-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.2",
    "idna>=3.11",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
